5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4374/executions/1596_842.log
== SUBMITION (2019-04-02 13:24:55) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_diug = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegarsegdigiyo % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.135203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 5, in <module>
    pegarterceirodigito = pegarsegdigiyo % 100
NameError: name 'pegarsegdigiyo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:24:59) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_diug = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegarsegdigiyo % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pegarterceirodigito = pegarsegdigiyo % 100
NameError: name 'pegarsegdigiyo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:25:53) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_diug = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegarsegdigiyo % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.146916
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 5, in <module>
    pegarterceirodigito = pegarsegdigiyo % 100
NameError: name 'pegarsegdigiyo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:26:50) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegarsegdigiyo % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.146968
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 5, in <module>
    pegarterceirodigito = pegarsegdigiyo % 100
NameError: name 'pegarsegdigiyo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:28:03) 
-- CODE:
entrada = int(input("numero de quatro digitos"))
pri_dig = entrada // 1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito // 10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10

soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.168106
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
